trocado o 'alt' de gatinho para gatinho na neve

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Imagem com link externo</h1>
-    <a href="https://google.com." target="_blank"><img src="https://placekitten.com/200/300" alt="gatinho"></a>
+    <a href="https://google.com." target="_blank"><img src="https://placekitten.com/200/300" alt="gatinho na neve"></a>
 
 </body>
 
